fixed overflow on text wrappers (tailwind bug)

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,7 @@
 
 h1,p,h2 {
     font-family: 'Source Sans Pro', sans-serif;
-    
+    overflow: hidden !important;
 }
 
 #home {
